# imagewriter

./: .gitignore  .travis.yml  CMakeLists.txt  DeviceItem.h  MainWindow.cpp  MainWindow.h  MetaTypes.h  PiSi-imagewriter  Platform.cpp  Platform.h  PlatformHal.cpp  PlatformHal.h  PlatformUdisks.cpp  PlatformUdisks.h  PlatformUdisks2.cpp  PlatformUdisks2.h  README.md  imagewriter.1  imagewriter.desktop  imagewriter.pro  imagewriter.qrc  imagewriter.spec  main.cpp  udisks2_interface.cpp  udisks2_interface.h  udisks2_mountpoints_interface.cpp  udisks2_mountpoints_interface.h  udisks2_mountpoints_interface.xml
windows/: ImageWriter.sln  LICENSE  README  UpgradeLog.XML
windows/ImageWriter/: ImageWriter.csproj  ImageWriter_TemporaryKey.pfx  MainWindow.Designer.cs  MainWindow.cs  ProgressDialog.Designer.cs  ProgressDialog.cs  app.config
windows/ImageWriter/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
